# 增加库的依赖
FIND_PACKAGE( PCL 1.7 REQUIRED COMPONENTS common io visualization filters )
FIND_PACKAGE( OpenCV 3 REQUIRED )

# 添加头文件和库文件
ADD_DEFINITIONS( ${PCL_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS}  )
LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )

add_library(libsemidense
DepthHypo.cpp
DepthMap.cpp
)
TARGET_LINK_LIBRARIES(libsemidense ${OpenCV_LIBS})

# INCLUDE_DIRECTORIES( ${PROJECT_SOURSE_DIR}/include )
ADD_EXECUTABLE( main main.cpp )
TARGET_LINK_LIBRARIES(main libelas ${PCL_LIBRARIES} ${OpenCV_LIBS})
